# magacin-mr-engines

./: .eslintrc.cjs  .gitignore  .prettierrc  AUTOMATSKI_UPDATE_UPUTSTVO.md  BRANDING.md  BRISANJE_ZADUZENJA_FIX.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CHANGELOG_FINAL.md  CREATE_RELEASE_v1.2.0.md  CROSS_PLATFORM_UPDATE_PLAN.md  CUSTOM_UPDATE_SISTEM.md  DATABASE_INFO.md  DATUM_VREME_FIX.md  DEMO_VERZIJA.md  DEPLOYMENT.md  DVE_VERZIJE_OBJASNJENJE.md  EXPORT_IMPLEMENTATION.md  FILES_CREATED.md  FINALNI_DMG.md  FINALNO_README.md  FINAL_DMG_README.md  FINAL_FEATURES.md  FINAL_UPDATE_BRISANJE.md  GITHUB_PUSHED.md  INSTALACIJA.md  INSTALL.md  KAKO_INSTALIRATI.md  KAKO_TESTIRATI_POSLE_IZMENA.md  KONACNA_VERZIJA.md  LICENSE  LOGS_GUIDE.md  NOVA_VERZIJA_README.md  PERFORMANCE_FIX.md  PRODUCTION_FINALNO.md  PRODUCTION_README.md  PROJECT_OVERVIEW.md  QUICK_START.md  QUICK_START_WINDOWS.md  README.md  (+19 more)
.github/workflows/: release.yml
FINAL_BUILDS/: BRZA_UPUTSTVA.md  CLEAN_BUILD_RADI.md  FINALNO.md  FINALNO_ISPRAVLJENO.md  INSTALIRAJ_OVE.md  KONACNO_GOTOVO.md  PROBLEM_RESEN.md  README.md  SAMO_OVE_DVE.md
scripts/: bump-version.js  quick-release.js  setup.ps1  setup.sh
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Login.jsx  Sidebar.jsx
src/components/ui/: alert.jsx  avatar.jsx  badge.jsx  button.jsx  calendar.jsx  card.jsx  checkbox.jsx  dialog.jsx  dropdown-menu.jsx  field.jsx  hover-card.jsx  input.jsx  label.jsx  popover.jsx  progress.jsx  select.jsx  table.jsx  (+8 more)
src/lib/: utils.js
(+28 files in other folders)
