[package]
name = "magacin-app"
version = "1.0.0"
description = "Desktop aplikacija za upravljanje magacinom"
authors = ["Your Name"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
tauri-plugin-dialog = { version = "2.4.0", features = [] }
tauri-plugin-fs = { version = "2.4.2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

